# cuAgg

./: .gitignore  .gitmodules  CMakeLists-original.txt  CMakeLists.txt  README.md  cmake_install.sh  requirements.txt
analysis/: plot_sparsity_perf.py
examples/: example_aggregate.cu  example_generate_graph.cpp  example_graph.cpp
src/: Makefile  agg  aggregate.cu  aggregate.cuh  aggregate_cpu.cu  cuda.cuh  dyn_script  example_aggregate.cu  example_generate_graph.cpp  generate_graph.cpp  generator.cpp  generator.h  graph.cpp  graph.h  main.cpp  profile.sh  test_aggregate_dyn_script.cu
src/graph/: generator.cpp  generator.h  graph.cpp  graph.h  partition.cpp  partition.h
src/kernels/: aggregate.cu  aggregate.cuh  aggregate_cpu.cu  aggregate_db.cu  aggregate_templated.cuh
src/profile-scale-10/: scale-10-degree-10-profile.txt  scale-10-degree-100-profile.txt  scale-10-degree-5-profile.txt  scale-10-degree-50-profile.txt  scale-10-degree-500-profile.txt  scale-10-degree-800-profile.txt
src/profile-scale-12/: scale-12-degree-10-profile.txt  scale-12-degree-100-profile.txt  scale-12-degree-5-profile.txt  scale-12-degree-50-profile.txt  scale-12-degree-500-profile.txt  scale-12-degree-800-profile.txt
src/profile-scale-15/: scale-15-degree-10-profile.txt  scale-15-degree-100-profile.txt  scale-15-degree-5-profile.txt  scale-15-degree-50-profile.txt  scale-15-degree-500-profile.txt  scale-15-degree-800-profile.txt
src/profile-scale-20/: scale-20-degree-10-profile.txt  scale-20-degree-100-profile.txt  scale-20-degree-5-profile.txt  scale-20-degree-50-profile.txt  scale-20-degree-500-profile.txt
src/profiling/profile-scale-11/: scale-11-degree-10-profile.txt  scale-11-degree-100-profile.txt  scale-11-degree-25-profile.txt  scale-11-degree-5-profile.txt  scale-11-degree-50-profile.txt  scale-11-degree-75-profile.txt
src/profiling/profile-scale-13/: scale-13-degree-10-profile.txt  scale-13-degree-100-profile.txt  scale-13-degree-25-profile.txt  scale-13-degree-5-profile.txt  scale-13-degree-50-profile.txt  scale-13-degree-75-profile.txt
src/profiling/profile-scale-15/: scale-15-degree-10-profile.txt  scale-15-degree-100-profile.txt  scale-15-degree-25-profile.txt  scale-15-degree-5-profile.txt  scale-15-degree-50-profile.txt  scale-15-degree-75-profile.txt
src/profiling/profile-scale-7/: scale-7-degree-10-profile.txt  scale-7-degree-100-profile.txt  scale-7-degree-25-profile.txt  scale-7-degree-5-profile.txt  scale-7-degree-50-profile.txt  scale-7-degree-75-profile.txt
src/profiling/profile-scale-9/: scale-9-degree-10-profile.txt  scale-9-degree-100-profile.txt  scale-9-degree-25-profile.txt  scale-9-degree-5-profile.txt  scale-9-degree-50-profile.txt  scale-9-degree-75-profile.txt
tests/: test_aggregate_cpu.cu  test_aggregate_db_naive.cu  test_aggregate_db_naive_sliced.cu  test_aggregate_dyn.cu  test_aggregate_dyn_rf.cu  test_aggregate_dyn_sm.cu  test_aggregate_dyn_sm_rf.cu  test_aggregate_naive.cu  test_aggregate_partition.cu  test_generate_graph.cpp  test_partition.cpp  testing.cpp  testing.h
utils/: generate_graph.cpp  profile_kernels.cu  profile_kernels_sparsity.cu  visualize_graph.cpp
